--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: dart analyze --fatal-infos --fatal-warnings .
 
       - name: Run tests
-        run: dart test test/test.dart --coverage 
+        run: dart test test/test.dart --coverage=./coverage
 
       - name: Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
