--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: data_queue
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-
+homepage: https://github.com/KirsApps/data_queue
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
